# lively_tk_ros

./: .gitignore  CMakeLists.txt  Manifest.toml  Project.toml  README.md  install.jl  package.xml  setup.cfg  setup.py
eval/: nao_wave_task.csv  (+23 more)
lively_ik/: EvalNode.jl  Node.jl  __init__.py  configure.py  control.py  eval.py  eval_commander.py  eval_process.py  eval_solver.py  interface.py  manager.py  package.xml  param.py  setup.py  simple_pub.py
lively_ik/applications/: app.py  commander.py  config_creator.py
lively_ik/config/: eve.json  nao.json  nao_nice.json  nao_nonn.json  nao_stripped.json  nao_test.json  panda.json  panda.yaml  panda_newnn.json  panda_nonn.json  panda_test.json
lively_ik/groove/: relaxed_ik_container.py
lively_ik/launch/: apps_launch.py  basic_launch.py  eval_launch.py  lively_ik.py  lively_ik_bridge_ros1.py  lively_ik_nobridge.py
lively_ik/lively_ik/: __init__.py  interface.py  solver.py
lively_ik/spacetime/: arm.py  robot.py
lively_ik/testing/: config_testing.py  eval.py  eval_process.py  mesh_testing.py  multi_arm_testing.py  nn_testing.py
lively_ik/utils/: collision_graph.py  collision_transfer.py  collision_utils.py  config_engine.py  kdl_parser_py.py  manager.py  neural_net_trainer.py  urdf_load.py
lively_tk_ros/: CMakeLists.txt  package.xml  setup.cfg  setup.py  ur3e_config_testing.py
lively_tk_ros/config/: nao.json  nao_nonn.json  nao_testing.json  panda.json  panda_nonn.json
lively_tk_ros/launch/: default_urdf.xml  lively_studio_backend.py  lively_studio_backend_ros1.xml  ur3e.xml
lively_tk_ros/lively_tk_ros/: EvalNode.jl  Node.jl  interface_ros1.py  solver.py
lively_tk_ros/testing/: Node.jl  collision_testing.py  config_testing.py  control.py  dependency_testing.py  eval.py  eval_solver.py  multi_arm_testing.py  nn_testing.py  param.py  simple_pub.py  visualize.py
(+345 files in other folders)
