<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lively_tk_ros</name>
  <version>0.1.0</version>
  <description>The LivelyTK ROS2 Package</description>
  <maintainer email="schoen@cs.wisc.edu">schoen</maintainer>
  <maintainer email="rakita@todo.todo">rakita</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-scikit-learn</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-python-fcl</exec_depend>
  <exec_depend>python3-urdf-parser-py</exec_depend>
  <exec_depend>python3-PyKDL</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
